--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Погода</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main-Matvey.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -49,22 +49,22 @@
         <section class="main__inner">
             <div class="news__grid">
                   <a class="card" href="today.html">
-                    <div class="card__background" style="background-image: url(../images/sun-background.jpg)"></div>
+                    <div class="card__background" style="background-image: url(images/sun-background.jpg)"></div>
                     <div class="card__content">
                       <p class="card__category">Погода</p>
                       <h3 class="card__heading">Сейчас</h3>
-                      <h3>25°</h3>
+                      <h3></h3>
                     </div>
                   </a>
                   <a class="card" href="twoweeks.html">
-                    <div class="card__background" style="background-image: url(../images/twoweeks-background.jpg)"></div>
+                    <div class="card__background" style="background-image: url(images/twoweeks-background.jpg)"></div>
                     <div class="card__content">
                       <p class="card__category">Погода</p>
                       <h3 class="card__heading">Две недели</h3>
                     </div>
                   </a>
                   <a class="card" href="#">
-                    <div class="card__background" style="background-image: url(../images/mounth-background.jpg)"></div>
+                    <div class="card__background" style="background-image: url(images/mounth-background.jpg)"></div>
                     <div class="card__content">
                       <p class="card__category">Погода</p>
                       <h3 class="card__heading">Месяц</h3>
