--- a/main.html
+++ b/main.html
@@ -1,116 +1,144 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Погода</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="weather">
-        <nav class="navbar">
-            <div class="container">
-                <div class="navbar__left">
-                    <input class="checkbox" type="checkbox" name="checkbox" id="" />
-                    <div class="menu btn10" data-menu="10">
-                        <div class="icon"></div>
+
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Погода</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+            rel="stylesheet" />
+        <link rel="stylesheet" href="styles/main.css" />
+        <link
+            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+            rel="stylesheet" />
+    </head>
+
+    <body>
+        <div class="weather">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar__left">
+                        <input class="checkbox" type="checkbox" name="checkbox"
+                            id="" />
+                        <div class="menu btn10" data-menu="10">
+                            <div class="icon"></div>
+                        </div>
+                        <a href="today.html" class="navbar__brand logo_1"></a>
                     </div>
-                    <a href="today.html" class="navbar__brand logo_1"></a>
+                    <div class="navbar__wrap">
+                        <ul class="navbar__menu">
+                            <li><a href="main.html">Главная</a></li>
+                            <li><a href="today.html">Сегодня</a></li>
+                            <li><a href="twoweeks.html">Две недели</a></li>
+                            <li><a href="month.html">Месяц</a></li>
+                            <li><a href="contacts.html">Контакты</a></li>
+                        </ul>
+                        <form class="search__container">
+                            <input type="search" id="search" maxlength="30"
+                                minlength="2" placeholder="Город" name="q"
+                                autocomplete="off" required />
+                            <button class="search__button" type="submit"></button>
+                            <!-- <span class="search__icon"></span> -->
+                        </form>
+                    </div>
                 </div>
-                <div class="navbar__wrap">
-                    <ul class="navbar__menu">
+                <div class="menu__background" id="back">
+                    <ul class="menu__items" id="phone__items">
                         <li><a href="main.html">Главная</a></li>
                         <li><a href="today.html">Сегодня</a></li>
                         <li><a href="twoweeks.html">Две недели</a></li>
                         <li><a href="month.html">Месяц</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
                     </ul>
-                    <form class="search__container">
-                        <input type="search" id="search" 
-                        maxlength="30" minlength="2" placeholder="Город" name="q" autocomplete="off" required>
-                        <button class="search__button" type="submit"></button>
-                        <!-- <span class="search__icon"></span> -->
-                    </form>
                 </div>
-            </div>
-            <div class="menu__background" id = "back">
-                <ul class="menu__items" id="phone__items">
-                    <li><a href="main.html">Главная</a></li>
-                    <li><a href="today.html">Сегодня</a></li>
-                    <li><a href="twoweeks.html">Две недели</a></li>
-                    <li><a href="month.html">Месяц</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="author__name">Погода</div>
-        <section class="main__inner">
-            <div class="news__grid">
-                  <a class="card" href="today.html">
-                    <div class="card__background" style="background-image: url(images/sun-background.jpg)"></div>
-                    <div class="card__content">
-                      <p class="card__category">Погода</p>
-                      <h3 class="card__heading">Сейчас</h3>
-                      <h3></h3>
-                    </div>
-                  </a>
-                  <a class="card" href="twoweeks.html">
-                    <div class="card__background" style="background-image: url(images/twoweeks-background.jpg)"></div>
-                    <div class="card__content">
-                      <p class="card__category">Погода</p>
-                      <h3 class="card__heading">Две недели</h3>
-                    </div>
-                  </a>
-                  <a class="card" href="#">
-                    <div class="card__background" style="background-image: url(images/mounth-background.jpg)"></div>
-                    <div class="card__content">
-                      <p class="card__category">Погода</p>
-                      <h3 class="card__heading">Месяц</h3>
-                    </div>
-                </a>
-            </div>
-        </section>    
-        <div class="not__line"  >
-            <div class="notification" >
-                <div class="content">
-                    <div class="bell"></div>
-                    <div class="content__head"> </div>
-                    <div class="dropdown__content" >
-                        <a href="today.html">Link 1</a>
+            </nav>
+            <div class="author__name">Погода</div>
+            <section class="main__inner">
+                <div class="news__grid">
+                    <a class="card" href="today.html">
+                        <div class="card__background" style="background-image:
+                            url(images/sun-background.jpg)"></div>
+                        <div class="card__content">
+                            <p class="card__category">Погода</p>
+                            <h3 class="card__heading">Сейчас</h3>
+                            <h3></h3>
+                        </div>
+                    </a>
+                    <a class="card" href="twoweeks.html">
+                        <div class="card__background" style="background-image:
+                            url(images/twoweeks-background.jpg)"></div>
+                        <div class="card__content">
+                            <p class="card__category">Погода</p>
+                            <h3 class="card__heading">Две недели</h3>
+                        </div>
+                    </a>
+                    <a class="card" href="#">
+                        <div class="card__background" style="background-image:
+                            url(images/mounth-background.jpg)"></div>
+                        <div class="card__content">
+                            <p class="card__category">Погода</p>
+                            <h3 class="card__heading">Месяц</h3>
+                        </div>
+                    </a>
+                </div>
+            </section>
+            <div class="not__line">
+                <div class="notification">
+                    <div class="content">
+                        <div class="bell"></div>
+                        <div class="content__head"></div>
+                        <div class="dropdown__content">
+                            <a href="today.html">Link 1</a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <footer class="podval">
+                <div class="podval__container">
+                    <div class="podval__left">
+                        <div class="company__name">Независимый разработчик
+                            "Kritskiy"</div>
+                    </div>
+                    <div class="podval__center">
+                        <div class="podval__wrap"></div>
+                    </div>
+                    <div class="podval__right">
+                        <div class="podval__right__first__row">
+                            <a href="#" class="podval__phone">+7(915)-050-52-41</a>
+                        </div>
+                        <div class="podval__right__second__row">
+                            <ul class="podval__right__menu">
+                                <li>
+                                    <a href="#">
+                                        <div class="telegramm
+                                            podval__ref__background"></div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <div class="youtube
+                                            podval__ref__background"></div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <div class="vk podval__ref__background"></div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <div class="facebook
+                                            podval__ref__background"></div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
-        <footer class="podval">
-            <div class="podval__container">
-                <div class="podval__left">
-                    <div class="company__name">Независимый разработчик "Kritskiy"</div>
-                </div>
-                <div class="podval__center">
-                    <div class="podval__wrap">
-                        
-                </div>
-            </div>
-                <div class="podval__right">
-                    <div class="podval__right__first__row">
-                        <a href="#" class="podval__phone">+7(915)-000-00-00</a>
-                    </div>
-                    <div class="podval__right__second__row">
-                        <ul class="podval__right__menu">
-                            <li ><a href="#"><div class="telegramm podval__ref__background"></div></a></li>
-                            <li ><a href="#"><div class="youtube podval__ref__background"></div></a></li>
-                            <li ><a href="#"><div class="vk podval__ref__background"></div></a></li>
-                            <li ><a href="#"><div class="facebook podval__ref__background"></div></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
-    <script src='js/main.js'></script>
-    <script src="js/notification.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/notification.js"></script>
+    </body>
 
-</body>
 </html>
