--- a/main.html
+++ b/main.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="podval__right">
                         <div class="podval__right__first__row">
-                            <a href="#" class="podval__phone">+7(915)-050-52-41</a>
+                            <a href="month.html" class="podval__phone">+7(915)-050-52-41</a>
                         </div>
                         <div class="podval__right__second__row">
                             <ul class="podval__right__menu">
