--- a/today.html
+++ b/today.html
@@ -9,6 +9,8 @@
             rel="stylesheet"
             />
         <link rel="stylesheet" href="styles/main.css" />
+        <link rel="stylesheet" href="styles/today.css" />
+
         <link
             href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
             rel="stylesheet"
