--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
                             <h3 class="card__heading">Две недели</h3>
                         </div>
                     </a>
-                    <a class="card" href="#">
+                    <a class="card" href="month.html">
                         <div class="card__background" style="background-image:
                             url(images/mounth-background.jpg)"></div>
                         <div class="card__content">
